pxc/tests/test_044_syntax/comment2.px
public namespace comment2;
import core::common -;

function int t1()
{
  int x = 10;
  /*
  x += 3;
  x += 4;
  */
  println(x);
  hoge(); // error
  return x;
}

t1();

